# wow-patcher-plus

./: README.md  package-lock.json  package.json  patches.json
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/1-foundation-forum-parser/: 1-01-PLAN.md  1-01-SUMMARY.md  1-02-PLAN.md  1-02-SUMMARY.md  1-RESEARCH.md  1-VERIFICATION.md
.planning/phases/2-download-engine/: 2-01-PLAN.md  2-01-SUMMARY.md  2-02-PLAN.md  2-02-SUMMARY.md  2-03-PLAN.md  2-03-SUMMARY.md  2-04-PLAN.md  2-04-SUMMARY.md  2-RESEARCH.md  2-VERIFICATION.md
.planning/phases/3-installation-engine/: 3-01-PLAN.md  3-01-SUMMARY.md  3-02-PLAN.md  3-02-SUMMARY.md  3-03-PLAN.md  3-03-SUMMARY.md  3-RESEARCH.md  3-VERIFICATION.md
.planning/phases/4-gui-configuration/: 4-01-PLAN.md  4-01-SUMMARY.md  4-02-PLAN.md  4-02-SUMMARY.md  4-03-PLAN.md  4-03-SUMMARY.md  4-04-PLAN.md  4-04-SUMMARY.md  4-RESEARCH.md  4-VERIFICATION.md
.planning/phases/5-integration-fixes/: 5-01-PLAN.md  5-01-SUMMARY.md  5-VERIFICATION.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/download/: engine.rs  manager.rs  mod.rs  progress.rs  resume.rs
src-tauri/src/download/providers/: dropbox.rs  gdrive.rs  mediafire.rs  mega.rs  mod.rs  transfer.rs
src-tauri/src/install/: copier.rs  detector.rs  manager.rs  mod.rs  repair.rs  settings.rs  verifier.rs
src-tauri/src/models/: download.rs  mod.rs  patch.rs
src-tauri/src/parser/: dependencies.rs  forum.rs  links.rs  mod.rs  modules.rs
src/components/: DownloadProgress.tsx  FolderPicker.tsx  InstallProgress.tsx  ModuleList.tsx  PresetSelector.tsx  RequirementsPanel.tsx  UpdateBanner.tsx
src/components/ui/: progress.tsx
src/hooks/: useDownload.ts  useInstall.ts  usePatches.ts  useWowPath.ts
src/lib/: presets.ts  tauri.ts
