[package]
name = "turtle-wow-hd-patcher"
version = "0.1.0"
description = "Automated HD Patch installer for WoW"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "turtle_wow_hd_patcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.25"
regex = "1"
url = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
flate2 = "1"
tar = "0.4"
chrono = "0.4"
mega = "0.8"
sluice = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
tempfile = "3"
